--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
 
 <head>
   <meta charset='utf-8'>
-
+  <title>hw-06</title>
+  <link rel="stylesheet" href="style.css">
+  <script src = "js/d3.v6.1.1/d3.min.js"> </script>
 </head>
 
-
 <body>
- 
+  <h1>hw-05: Interactive Graph with D3</h1>
+  <div class = "flex-container">
+    <!-- LEFT COLUMN -->
+    <div class = "left-col">
+    </div>
+    <!-- MIDDLE COLUMN -->
+    <div class = "mid-col">
+    </div>
+    <!-- RIGHT COLUMN -->
+    <div class = "right-col">
+    </div>
+  </div>
+  <h2> Acknowledgements </h2>
+  <ul>
+    <li></li>
+  </ul>
+  <script src="main.js"></script>
 </body>
 
 </html>
