--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <h1>hw-05: Interactive Graph with D3</h1>
   <div class = "flex-container">
     <!-- LEFT COLUMN -->
-    <div class = "left-col">
+    <div class = "col" id = "left">
     </div>
     <!-- MIDDLE COLUMN -->
-    <div class = "mid-col">
+    <div class = "col" id = "mid">
     </div>
     <!-- RIGHT COLUMN -->
-    <div class = "right-col">
+    <div class = "col" id = "right">
     </div>
   </div>
   <h2> Acknowledgements </h2>
