--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
   <div class = "flex-container">
     <!-- LEFT COLUMN -->
     <div class = "col" id = "left">
+      <h3>Petal_Length vs. Sepal_Length</h3>
     </div>
     <!-- MIDDLE COLUMN -->
     <div class = "col" id = "mid">
+      <h3>Petal_Width vs. Sepal_Width</h3>
     </div>
     <!-- RIGHT COLUMN -->
     <div class = "col" id = "right">
+      <h3>Counts of Species</h3>
     </div>
   </div>
   <h2> Acknowledgements </h2>
   <ul>
-    <li></li>
+    <li><a href = "https://d3-graph-gallery.com/graph/interactivity_brush.html"> D3 Brushing </a></li>
+    <li><a href = "https://observablehq.com/@d3/brushable-scatterplot"> Brush V6 </a></li>
   </ul>
   <script src="main.js"></script>
 </body>
