--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>hw-05: Interactive Graph with D3</h1>
+  <h1>hw-06 - D3 Brushing & Linking</h1>
   <div class = "flex-container">
     <!-- LEFT COLUMN -->
     <div class = "col" id = "left">
